<resources>
    <string name="app_name">Hack365</string>
    <string name="regester"><u>Đăng ký ngay</u></string>
    <string name="signin">ĐĂNG NHẬP</string>
    <string name="signup">ĐĂNG KÝ</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_home">Home</string>
    <string name="title_phone">Phone</string>
    <string name="title_notification">Notification</string>
    <string name="title_menu">Menu</string>
    <string name="title_confirm">Confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>