<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hangbt.hust.hack365.navigation.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_confirmFragment"
            app:destination="@id/navigation_confirm" />
    </fragment>

    <fragment
        android:id="@+id/navigation_phone"
        android:name="hangbt.hust.hack365.navigation.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="hangbt.hust.hack365.navigation.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="hangbt.hust.hack365.navigation.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/navigation_confirm"
        android:name="hangbt.hust.hack365.navigation.VerifyFragment"
        android:label="@string/title_confirm"
        tools:layout="@layout/fragment_verify" />
</navigation>